port text filter plugin

BUG: 347243